--- a/frontend/theme.css
+++ b/frontend/theme.css
@@ -24,6 +24,7 @@
   --red: #f7768e;
   --orange: #ff9e64;
   --yellow: #e0af68;
+  --purple: #a371f7;
   --border: #292e42;
   --border-comment: #3d59a1;
   --comment-bg: #1a1f36;
@@ -70,6 +71,7 @@
     --red: #cf222e;
     --orange: #bc4c00;
     --yellow: #9a6700;
+    --purple: #8250df;
     --border: #d8dee4;
     --border-comment: #0969da;
     --comment-bg: #f0f6ff;
@@ -116,6 +118,7 @@
   --red: #f7768e;
   --orange: #ff9e64;
   --yellow: #e0af68;
+  --purple: #a371f7;
   --border: #292e42;
   --border-comment: #3d59a1;
   --comment-bg: #1a1f36;
@@ -161,6 +164,7 @@
   --red: #cf222e;
   --orange: #bc4c00;
   --yellow: #9a6700;
+  --purple: #8250df;
   --border: #d8dee4;
   --border-comment: #0969da;
   --comment-bg: #f0f6ff;
